--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
 		<ul class="article-tag-list">
 			 
         		<li class="article-tag-list-item">
-        			<a href="javascript:void(0)" class="js-tag article-tag-list-link color5">听课笔记</a>
+        			<a href="javascript:void(0)" class="js-tag article-tag-list-link color2">听课笔记，现代优化算法</a>
         		</li>
       		
 		</ul>
